--- a/app/src/main/res/layout/activity_room_history_screen.xml
+++ b/app/src/main/res/layout/activity_room_history_screen.xml
@@ -1,65 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundpic"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.screens.RoomHistoryScreen"
-    android:padding="12dp">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
     <RelativeLayout
-        android:layout_width="388dp"
-        android:layout_height="45dp"
-        android:gravity="center_vertical"
-        android:id="@+id/backbutton">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/backgroundpic"
+        tools:context=".ui.screens.RoomHistoryScreen"
+        android:padding="12dp">
 
-        <ImageButton
-            android:id="@+id/back_button"
-            android:layout_marginStart="12dp"
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:background="@color/transparent"
-            android:layout_centerVertical="true"
-            android:src="@drawable/baseline_arrow_back_ios_new_24" />
 
-        <TextView
-            android:id="@+id/roomTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="8dp"
-            android:layout_toEndOf="@id/back_button"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:text="Room History"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="20sp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+        <RelativeLayout
+            android:layout_width="388dp"
+            android:layout_height="45dp"
+            android:gravity="center_vertical"
+            android:id="@+id/backbutton">
+
+            <ImageButton
+                android:id="@+id/back_button"
+                android:layout_marginStart="12dp"
+                android:layout_width="20dp"
+                android:layout_height="30dp"
+                android:background="@color/transparent"
+                android:layout_centerVertical="true"
+                android:src="@drawable/baseline_arrow_back_ios_new_24" />
+
+            <TextView
+                android:id="@+id/roomTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="8dp"
+                android:layout_toEndOf="@id/back_button"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:text="Room History"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="20sp"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/backbutton"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/darker_gray" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tagRecyclerView"
+            android:layout_width="399dp"
+            android:layout_height="627dp"
+            android:layout_below="@id/divider"
+            android:layout_marginTop="5dp" />
+
+
 
     </RelativeLayout>
+</LinearLayout>
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/backbutton"
-        android:layout_marginTop="10dp"
-        android:background="@android:color/darker_gray" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tagRecyclerView"
-        android:layout_width="399dp"
-        android:layout_height="627dp"
-        android:layout_below="@id/divider"
-        android:layout_marginTop="5dp" />
-
-</RelativeLayout>
 
 
 
