--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -42,14 +42,13 @@
                     android:layout_height="wrap_content"
                     tools:ignore="MissingConstraints">
 
-
                     <AutoCompleteTextView
                         android:id="@+id/roomEditText"
                         android:layout_width="0dp"
                         android:layout_height="42dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="8dp"
-                        android:background="@null"
+                        android:background="@drawable/white_input"
                         android:hint="Enter Room Number"
                         android:inputType="text"
                         android:textColor="@color/white"
